<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    tools:context="com.example.fortypercent.MainActivity" >
   
    <LinearLayout
        android:id="@+id/main_Note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
	    android:gravity="center"
        android:orientation="vertical" >
        
        <ImageView
	        android:id="@+id/note_icon"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/note_launcher" />
        
        <TextView
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
            android:ems="10" 
            android:maxLines="10"
            android:scrollbars="vertical"
            android:shadowColor="#F9F900"
	        android:shadowDx="4.0"
	        android:shadowDy="4.0"
	        android:shadowRadius="2.0"
	        android:textColor="#4A4AFF"
        	android:textSize="25sp" />
        
        <Button
	        android:id="@+id/edit_note"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:background="#00000000"
			android:layout_marginTop="30dp"
	        android:text="@string/edit_note"
            android:textColor="#4169E1"
            android:textSize="15sp" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/main_Settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="50dp"
	        android:layout_marginLeft="10dp" >
			
	        <TextView
		        android:id="@+id/main_Settings_Inv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/main_Settings"
	            android:textColor="#41535e"
	            android:textSize="25sp"  />
        </LinearLayout>
        
        <LinearLayout 
	        android:id="@+id/Settings_Inv"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
			android:layout_marginTop="20dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp" >
        
            <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:orientation="vertical"
		        android:layout_weight="3" >
				
	            <TextView
			        android:id="@+id/Inv_text1"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:text="@string/Settings_Inv"
		            android:textColor="#41535e"
		            android:textSize="20sp" />
            </LinearLayout >
            
            <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
	        	android:orientation="horizontal"
		        android:layout_weight="6" >
	            
                <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:text="-"
		            android:textColor="#000000"
		            android:textSize="20sp" />
	            
	            <EditText
			        android:id="@+id/Inv_edit"
			        android:layout_width="50dp"
			        android:background="#03F5F5F5"
			        android:textColor="#000000"
	        		android:layout_marginLeft="5dp"
			        android:hint=" -4- "
			        android:textColorHint="#C0C0C0"
			        android:singleLine="true"
			        android:layout_height="match_parent"/>
	            
	            <TextView
			        android:id="@+id/Inv_text2"
			        android:layout_width="wrap_content"
			        android:layout_height="match_parent"
			        android:text="@string/Settings_Inv2"
		            android:textColor="#41535e"
		            android:textSize="20sp" />
	            
            </LinearLayout >
            
            <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
	        	android:orientation="horizontal"
		        android:layout_weight="7" >
	            
	            <Button
			        android:id="@+id/Inv_btn_qur"
			        android:text="@string/Inv_btn_qur"
			        android:gravity="center"
			        android:layout_width="45dp"
			        android:layout_height="match_parent"
			        android:background="@android:color/transparent"
		            android:textColor="#4169E1"
		            android:textSize="15sp" />
	        </LinearLayout >    
    	</LinearLayout >
    
        <LinearLayout 
	        android:id="@+id/Settings_add"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
			android:layout_marginTop="20dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp" >
        
            <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:orientation="vertical"
		        android:layout_weight="3" >
				
	            <TextView
			        android:id="@+id/add_text1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/Settings_Add"
		            android:textColor="#41535e"
		            android:textSize="20sp" />
            </LinearLayout >
            
            <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
	        	android:orientation="horizontal"
		        android:layout_weight="6" >
	            
	            <EditText
			        android:id="@+id/add_edit"
			        android:layout_width="80dp"
			        android:background="#03F5F5F5"
			        android:textColor="#000000"
			        android:singleLine="true"
			        android:hint=" -请输入- "
			        android:textColorHint="#C0C0C0"
			        android:layout_height="match_parent"/>
	            
            </LinearLayout >
            
            <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
	        	android:orientation="horizontal"
		        android:layout_weight="7" >
	            
	            <Button
			        android:id="@+id/add_btn_qur"
			        android:text="@string/Inv_btn_qur"
			        android:gravity="center"
			        android:layout_width="45dp"
			        android:layout_height="match_parent"
			        android:background="@android:color/transparent"
		            android:textColor="#4169E1"
		            android:textSize="15sp" />
	        </LinearLayout >
    	</LinearLayout >
    	
    	<LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="20dp"
	        android:layout_marginBottom="80dp"
	        android:layout_marginRight="20dp"
   			android:layout_weight="1"
   			android:orientation="vertical"
        	android:gravity="bottom|center">
            
            <TextView
		        android:id="@+id/about_me_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:textColor="#C0C0C0"
	            android:textSize="10sp" />
            <TextView
		        android:id="@+id/version_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	            android:textColor="#C0C0C0"
	            android:textSize="10sp" 
	            android:gravity="center" />
        </LinearLayout >
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:gravity="center"
        android:orientation="vertical" >
        
	    <LinearLayout
	        android:id="@+id/main_Main"
	        android:layout_width="match_parent"
	        android:layout_height="180dp"
	        android:orientation="vertical" 
	        android:background="@drawable/main_title_bg5" >
	        
	        <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
			    android:layout_marginTop="30dp"
			    android:layout_marginLeft="10dp"  >
				
		        <TextView
			        android:id="@+id/main_title"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/main_Main"
		            android:textColor="#E0E0E0"
		            android:textSize="25sp"  />
	        </LinearLayout>
	        <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
	        	android:orientation="vertical"
         		android:gravity="center" >
		        
		        <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
	         		android:gravity="center" >
			        
					<TextView
				        android:id="@+id/Time_text"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/Time_text"
			            android:textColor="#E0E0E0"
			            android:textSize="15sp"  />
			        
			        <TextView
				        android:id="@+id/Time_data"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
			        	android:layout_marginLeft="10dp"
				        android:text="0"
			            android:textColor="#E0E0E0"
			            android:textSize="30sp"  />
		        </LinearLayout>
		        <LinearLayout 
		            android:id="@+id/Time2_LinearLayout"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="2"
	         		android:gravity="center" >
			        
					<TextView
				        android:id="@+id/Time2_text"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="00-00-00"
			            android:textColor="#E0E0E0"
			            android:textSize="15sp"  />
		        </LinearLayout>
        	</LinearLayout>
        
            <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
         		android:gravity="right"
		    	android:layout_marginRight="10dp"  >
				
                <TextView
			        android:id="@+id/Used_text"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
		        	android:layout_marginLeft="20dp"
			        android:text="@string/Used_text"
		            android:textColor="#E0E0E0"
		            android:textSize="10sp"  />
		        
		        <TextView
			        android:id="@+id/Used_data"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
		        	android:layout_marginLeft="10dp"
			        android:text="0"
		            android:textColor="#E0E0E0"
		            android:textSize="15sp"  />
	        
	        </LinearLayout>
        
            <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
         		android:gravity="right"
		    	android:layout_marginRight="10dp" 
		    	android:layout_marginBottom="10dp">
				
                <TextView
			        android:id="@+id/Date_text"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
		        	android:layout_marginLeft="20dp"
			        android:text="@string/Date_text"
		            android:textColor="#E0E0E0"
		            android:textSize="10sp"  />
		        
		        <TextView
			        android:id="@+id/Date_data"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
		        	android:layout_marginLeft="10dp"
			        android:text="0"
		            android:textColor="#E0E0E0"
		            android:textSize="15sp"  />
	        
	        </LinearLayout>
	
	    </LinearLayout>
	    
	    <LinearLayout
		        android:id="@+id/normal"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		    	android:gravity="center"
		        android:orientation="vertical" >
	        
	        <LinearLayout
		    	android:layout_width="match_parent"
		        android:layout_height="match_parent"
				android:layout_marginTop="7dp"
		        android:orientation="horizontal" >
		        <TextView
			        android:id="@+id/paoma_light"
		    		android:gravity="center"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:textColor="#000000"
			        android:textSize="12sp"
			        android:text="@string/paoma_light1"
        			android:background="#40FF0000" 
			        
			        android:focusable="true"
			        android:singleLine="true"
			        android:ellipsize="marquee"
			        android:marqueeRepeatLimit="marquee_forever"
			        android:focusableInTouchMode="true" />
		    </LinearLayout>
		        
	        <LinearLayout
		        android:id="@+id/fund_list_title"
		    	android:layout_width="match_parent"
		        android:layout_height="match_parent"
				android:layout_marginTop="7dp"
	        	android:paddingLeft="15dp"
	        	android:paddingRight="15dp"
		        android:orientation="horizontal" >
		        
	            <TextView
			        android:id="@+id/lst_Num"
		        	android:layout_weight="2" 
		    		android:gravity="center"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:textColor="#C0C0C0"
			        android:textSize="12sp"
			        android:text="@string/fund_list_title_name" />
		    
			    <TextView
			        android:id="@+id/lst_jjjz"
		        	android:layout_weight="4" 
		    		android:gravity="center"
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:textColor="#C0C0C0"
			        android:textSize="12sp"
			        android:text="@string/fund_list_title_gz" />
			    
			    <TextView
			        android:id="@+id/lst_zzl"
		        	android:layout_weight="4"
		    		android:gravity="center" 
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:textColor="#C0C0C0"
			        android:textSize="12sp"
			        android:text="@string/fund_list_title_jz" />
	    
		    </LinearLayout>
		    
		    <com.handmark.pulltorefresh.library.PullToRefreshListView
		        android:id="@+id/jijin_list"
		        android:layout_width="match_parent"
		        android:layout_height="500dp"
        		android:layout_marginBottom="50dp"
		        android:cacheColorHint="#00000000"
		        android:divider="#19000000"
		        android:dividerHeight="1dp"
		        android:fadingEdge="none"
		        android:fastScrollEnabled="false"
		        android:footerDividersEnabled="false"
		        android:headerDividersEnabled="false"
		        android:smoothScrollbar="true" />
		</LinearLayout>
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/main_btn_Main_menu"
    	android:layout_alignParentBottom="true"
    	android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:gravity="center"
	    android:radius="6dp"
        android:background="@drawable/main_btn_bg" >
        
       <Button
	        android:id="@+id/btn_Main_Note"
	        android:layout_width="38dp"
	        android:layout_height="38dp"
	        android:layout_marginLeft="20dp"
			android:layout_marginTop="12dp"
        	android:layout_marginBottom="10dp"
        	android:background="@drawable/btn_note" 
	        android:paddingBottom="28dp" />
       
       <Button
	        android:id="@+id/btn_Main_page"
	        android:layout_width="38dp"
	        android:layout_height="38dp"
	        android:layout_marginLeft="20dp"
			android:layout_marginTop="10dp"
        	android:layout_marginBottom="10dp"
        	android:background="@drawable/btn_main" 
	        android:paddingBottom="28dp" />
       
       <Button
	        android:id="@+id/main_btn_Main_Settings"
	        android:layout_width="32dp"
	        android:layout_height="32dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
			android:layout_marginTop="13dp"
        	android:layout_marginBottom="10dp"
        	android:background="@drawable/btn_settings" 
	        android:paddingBottom="28dp" />
        
    </LinearLayout>
</RelativeLayout>